--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# CakePHP 3
+# CakePHP 3 dosyaları
 /vendor/
 /config/app.php
 
@@ -16,18 +16,19 @@
 /logs/*
 !/logs/empty
 
-# CakePHP 2
+# CakePHP 2 dosyaları
 /app/tmp/
 /app/Config/core.php
 /app/Config/database.php
 /vendors/
 
-# Kendi proje özel dosyalarım
+# Kendi projemin gizli dosyaları
 includes/config.php
+hash_uret.php
 
 # Log dosyaları
 *.log
 
-# Sistem dosyaları
+# Sistem dosyaları (macOS, Windows)
 .DS_Store
 Thumbs.db
